<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.root.yiplproject.ComplainActivity">

        <TextView
            android:id="@+id/txtchoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_an_email"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/email_arrays"

            android:padding="10dp" />

        <TextView
            android:id="@+id/txtchoose1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_project"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerproject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:entries="@array/project_arrays"
            android:padding="10dp" />


        <EditText
            android:id="@+id/send_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:padding="10dp" />

        <EditText
            android:id="@+id/send_body"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.27"
            android:hint="@string/msg_body"
            android:padding="10dp" />

        <Button
            android:id="@+id/imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorPrimaryDark"
            android:drawableTop="@drawable/camera"
            android:elevation="4dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Select a photo"
            android:textColor="#fff" />

        <ListView
            android:id="@+id/filelist"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:divider="#000"
            android:dividerHeight="4dp"
            tools:ignore="NestedScrolling" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimaryDark"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/colorPrimaryDark"
            android:text="@string/post"
            android:textAllCaps="false"
            android:textColor="@color/icons"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/logout"
            android:textColor="@color/icons"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>
</ScrollView>